--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-export-operation.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-export-operation.html
@@ -12,7 +12,7 @@
 
     <template>
         <alexandria-operation-trigger id="operation" title="[[_title]]" icon="[[stamp.properties.alexandriaIcon]]"
-                                      styles="[[_style]]" mode="[[stamp.properties.mode]]" color="[[stamp.properties.drawingColor]]"
+                                      styles="[[_style]]" mode="[[stamp.properties.mode]]" color="[[stamp.properties.color]]"
                                       on-execute="_openExportOptions"></alexandria-operation-trigger>
 
         <paper-dialog id="dialog" no-overlap horizontal-align="left" vertical-align="top">
