--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-open-catalog-operation.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-open-catalog-operation.html
@@ -10,7 +10,7 @@
     <template>
         <alexandria-operation-trigger id="trigger" title="[[stamp.label]]" on-execute="_openCatalog"
                                       icon="[[stamp.properties.alexandriaIcon]]"
-                                      mode="[[stamp.properties.mode]]" color="[[stamp.properties.drawingColor]]"
+                                      mode="[[stamp.properties.mode]]" color="[[stamp.properties.color]]"
                                       style$="[[_style]]"></alexandria-operation-trigger>
     </template>
 
