--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-task-operation.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-task-operation.html
@@ -11,7 +11,7 @@
         <div class="container">
             <alexandria-operation-trigger title="[[_title]]" icon="[[stamp.properties.alexandriaIcon]]"
                                           styles="[[_style]]" mode="[[stamp.properties.mode]]"
-                                          color="[[stamp.properties.drawingColor]]"
+                                          color="[[stamp.properties.color]]"
                                           on-execute="_confirmTask"></alexandria-operation-trigger>
         </div>
         <div id="dialogContainer" class="alexandria-stamp-task-operation-0">
