--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-open-dialog-operation.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-open-dialog-operation.html
@@ -7,7 +7,7 @@
     <template>
         <alexandria-operation-trigger title="[[stamp.label]]" on-execute="_openDialog"
                                       icon="[[stamp.properties.alexandriaIcon]]"
-                                      mode="[[stamp.properties.mode]]" color="[[stamp.properties.drawingColor]]"
+                                      mode="[[stamp.properties.mode]]" color="[[stamp.properties.color]]"
                                       style$="[[_style]]"></alexandria-operation-trigger>
     </template>
 
