alexandria-activity: adding validate fields. Fix color bug for stamps. Fix close panel bug when removes catalog item. Added Result to both stamps and toolbar operation executions.

--- a/alexandria/activity-elements-activity/src/widgets/_common/alexandria-element-behavior.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/alexandria-element-behavior.html
@@ -7,7 +7,7 @@
 
         properties : {
             _breadcrumbs : { type: Object, value: function () { return []; } },
-            _operationMessage : String
+            _notifyMessage : String
         },
 
         _refreshBreadcrumbs : function(tree) {
@@ -33,9 +33,9 @@
             $(this.$.panel).addClass("hidden");
         },
 
-        _showOperationMessage : function(message) {
-            this._operationMessage = message;
-            this.querySelector("paper-toast.operation-message").open();
+        _notifyUser : function(message) {
+            this._notifyMessage = message;
+            this.$.notifyMessageToast.open();
         },
 
         _showDialogBox : function() {
