--- a/alexandria/activity-elements-activity/src/widgets/alexandria-catalog-list-view.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-catalog-list-view.html
@@ -122,6 +122,10 @@
                 this.changeItem(e.detail);
             },
 
+            _validateItem : function(e) {
+                this.validateItem(e.detail);
+            },
+
             _downloadItem : function(e) {
                 this.downloadItemOperation(e.detail);
             },
