--- a/alexandria/activity-elements-activity/src/widgets/alexandria-item.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-item.html
@@ -20,8 +20,8 @@
                                    on-open-catalog="_openStampCatalog"
                                    on-execute-task-item="_executeTask"
                                    on-download-item="_download"
-                                   on-save-item="_change"
-                                   on-change-item="_validate"
+                                   on-change-item="_change"
+                                   on-validate-item="_validate"
                                    on-export-item="_export"></alexandria-mold-container>
         <template is="dom-if" if="[[!_item]]">
             <div class="message layout horizontal center center-justified">[[_emptyMessage]]</div>
@@ -119,6 +119,10 @@
 
             _change : function(e) {
                 this.changeItem(e.detail);
+            },
+
+            _validate : function(e) {
+                this.validateItem(e.detail);
             },
 
             _export : function(e) {
