--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-behavior.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-behavior.html
@@ -18,6 +18,11 @@
             this._render();
         },
 
+        refreshValidation : function(message) {
+            if (this.$.editor == null) return;
+            this.$.editor.validationMessage(message);
+        },
+
         _render : function() { }, // implemented by stamps
 
         _updateClassName : function () {
