--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-open-external-dialog-operation.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-open-external-dialog-operation.html
@@ -34,6 +34,7 @@
             margin: 50px;
             padding: 0;
             background: white;
+            position: absolute;
         }
         paper-dialog paper-icon-button {
             padding: 6px;
