--- a/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-map.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-map.html
@@ -92,6 +92,12 @@
                 catalogItem.update(item);
             },
 
+            refreshItemValidation : function(message, stamp, item) {
+                var element = item != null ? this.querySelector("alexandria-catalog-map-item[name=\"_item_" + item + "\"]") : this;
+                var stamp = element.querySelector("." + stamp);
+                stamp.refreshValidation(message);
+            },
+
             closeInfoWindows : function() {
                 let mapItems = this.querySelectorAll("alexandria-catalog-map-item");
                 mapItems.forEach((item) => item.closeInfoWindow());
