--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-editor.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-editor.html
@@ -4,7 +4,10 @@
 <dom-module id="alexandria-stamp-editor">
 
     <template>
-        <paper-input no-label-float value="{{value}}" on-keydown="_keyDown" on-keyup="_validate" on-blur="_close"></paper-input>
+        <paper-input no-label-float value="{{value}}"
+                     on-keydown="_keyDown" on-keyup="_validate"
+                     on-blur="_close"
+                     error-message="[[_validation]]"></paper-input>
     </template>
 
     <style>
@@ -13,8 +16,9 @@
         }
         :host paper-input {
             --paper-input-container : {
-                padding: 0;
+                padding: 3px 0;
                 height: 18px;
+                font-size: 12pt;
             };
             --paper-input-container-input : {
                 border: 1px solid #ddd;
@@ -40,23 +44,29 @@
 
             properties : {
                 label: String,
-                value: String
+                value: String,
+                _validation: String
             },
 
             focus : function() {
                 window.setTimeout(() => {
                     let input = this.querySelector("paper-input").$.input;
-                    input.focus();
-                    input.setSelectionRange(0, input.value.length);
-                }, 50);
+                input.focus();
+                input.setSelectionRange(0, input.value.length);
+            }, 50);
+            },
+
+            validationMessage : function(message) {
+                this._validation = message;
+                this.querySelector("paper-input").invalid = true;
             },
 
             _close : function(e) {
-                this.fire("close");
+                this.fire("close", this.value);
             },
 
             _keyDown : function(e) {
-                if (event.keyCode == 27) this.fire("close");
+                if (event.keyCode == 27) this.fire("close", this.value);
                 else if (event.keyCode == 13)
                     this.fire("save", this.value);
             },
@@ -66,7 +76,10 @@
                     window.clearTimeout(this.validateTimeout);
                     this.validateTimeout = null;
                 }
-                window.setTimeout(() => this.fire("validate", this.value), 100);
+                window.setTimeout(() => {
+                    this.querySelector("paper-input").invalid = false;
+                this.fire("validate", this.value)
+            }, 100);
             }
 
         });
