--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-layout-behavior.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-layout-behavior.html
@@ -56,6 +56,7 @@
             result.style = block.style != null ? block.style : "";
             result.expanded = block.expanded != null ? block.expanded : false;
             result.hiddenIfMobile = block.hiddenIfMobile != null ? block.hiddenIfMobile : false;
+            result.className = this._blockClassName(block);
             result.hidden = this._blockHidden(block);
             result.layout = this._blockLayout(block);
             result.width = this._blockWidth(block);
@@ -66,6 +67,11 @@
 
         _allowLazyLoad : function() {
             return this.mode == "list" || this.mode == "grid";
+        },
+
+        _blockClassName : function(block) {
+            var result = this.item.itemBlockList.filter(s => s.name == block.name);
+            return result.length > 0 ? result[0].className : false;
         },
 
         _blockHidden : function(block) {
